animation-iteration-count does not handle floating point values correctly. https://bugs.webkit.org/show_bug.cgi?id=69531

Source/WebCore:

Implements support for non-integers animation-iteration-count numbers.
Non-integer numbers will cause the animation to end part-way through a cycle.

Reviewed by Dean Jackson.

Tests: animations/fill-mode-iteration-count-non-integer.html
       animations/keyframes-iteration-count-non-integer.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
* css/CSSParser.cpp:
(WebCore::CSSParser::parseAnimationIterationCount):
* css/CSSStyleApplyProperty.cpp:
(WebCore::CSSStyleApplyProperty::CSSStyleApplyProperty):
* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::collectMatchingRulesForList):
* page/animation/AnimationBase.cpp:
(WebCore::AnimationBase::fractionalTime):
(WebCore::AnimationBase::progress):
* page/animation/CompositeAnimation.cpp:
(WebCore::CompositeAnimation::pauseAnimationAtTime):
* platform/animation/Animation.h:
(WebCore::Animation::iterationCount):
(WebCore::Animation::setIterationCount):
(Animation):
(WebCore::Animation::initialAnimationIterationCount):

LayoutTests:

Reviewed by Dean Jackson.

* animations/fill-mode-iteration-count-non-integer-expected.txt: Added.
* animations/fill-mode-iteration-count-non-integer.html: Added.
* animations/keyframes-iteration-count-non-integer-expected.txt: Added.
* animations/keyframes-iteration-count-non-integer.html: Added.


Canonical link: https://commits.webkit.org/98165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110588 268f45cc-cd09-0410-ab3c-d52691b4dbfc